--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Larissa Kim",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0"
+    "@11ty/eleventy": "^1.0.0",
+    "axios": "^0.25.0",
+    "dotenv": "^14.2.0"
   }
 }
