--- a/.github/workflows/build_eleventy.yml
+++ b/.github/workflows/build_eleventy.yml
@@ -1,8 +1,12 @@
 name: Build Eleventy
-on: [push]
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  build_deploy:
+  build:
     runs-on: ubuntu-20.04
 
     strategy:
@@ -12,15 +16,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies and build
-        - run: npm install
-        - run: npm run build
-
+        run: |
+          npm ci
+          npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
